# choco

./: .gitignore  choco.sln  docker-compose.yml  dump.sql  pyproject.toml
.github/workflows/: codeql.yml  deploy-production-choco.yml  deploy-production-telegram.yml  deploy-production-vk.yml  deploy-staging.yml  main.yml
NewAPI/: NewAPI.csproj  Program.cs  appsettings.Development.json  appsettings.json
NewAPI/Controllers/: ProductContoller.cs  ProductController.cs  ProductsController.cs
NewAPI/Controllers/Auth/: AuthController.cs
NewAPI/Controllers/Chats/: ChatController.cs  ChatsController.cs
NewAPI/Controllers/Products/: ProductController.cs  ProductsController.cs
NewAPI/Data/: ApplicationContext.cs
NewAPI/Migrations/: 20220616231534_Initial.Designer.cs  20220616231534_Initial.cs  20220617213436_RenameFields.Designer.cs  20220617213436_RenameFields.cs  20220618085251_AddUser.Designer.cs  20220618091458_MakeUsernameUnique.Designer.cs  ApplicationContextModelSnapshot.cs
NewAPI/Models/: Chat.cs  Order.cs  OrderCity.cs  OrderSource.cs  OrderState.cs  OrderedProduct.cs  PagingParameters.cs  Product.cs  User.cs
NewAPI/Properties/: launchSettings.json
NewAPI/RequestBodies/: PagingParameters.cs  UserParameters.cs
TelegramIntegration/: Dockerfile  main.py  pyproject.toml
TelegramIntegration/request_bodies/: send_messages_request_body.py
VkIntegration/: Dockerfile  main.py  pyproject.toml
VkIntegration/request_bodies/: EditProductRequestBody.py  ReplacePostRequestBody.py  UploadImageRequestBody.py  __init__.py
api/: .dockerignore  .editorconfig  Dockerfile  Program.cs  aerich.ini  api.csproj  gunicorn.conf.py  main.py  models.py  pyproject.toml
api/Controllers/Auth/: AuthController.cs
api/Controllers/Chats/: ChatController.cs  ChatsController.cs
api/Controllers/Products/: ProductController.cs  ProductsController.cs
api/Data/: ApplicationContext.cs  ApplicationJPIF.cs
api/Migrations/: 20220616231534_Initial.Designer.cs  20220616231534_Initial.cs  20220617213436_RenameFields.Designer.cs  20220617213436_RenameFields.cs  20220618085251_AddUser.Designer.cs  20220618085251_AddUser.cs  20220618091458_MakeUsernameUnique.Designer.cs  20220618091458_MakeUsernameUnique.cs  20220619063448_AddRolesMechanism.Designer.cs  20220619063448_AddRolesMechanism.cs  ApplicationContextModelSnapshot.cs
api/Models/: Chat.cs  Order.cs  OrderCity.cs  OrderSource.cs  OrderState.cs  OrderedProduct.cs  Product.cs  Role.cs  User.cs
api/OperationFilters/: AuthResponsesOperationFilter.cs
api/Properties/: launchSettings.json
api/RequestBodies/: PagingParameters.cs  UserParameters.cs
api/Responses/: Error.cs  Paged.cs  UserResponse.cs
api/api/: main.py
api/api/database/core/: init.py
api/api/database/services/: goods.py
api/database/: models.py
api/database/core/: init.py
api/database/services/: chats.py  goods.py  order_cities.py  order_items.py  order_sources.py  order_states.py  orders.py
api/migrations/models/: 0_20211014095110_init.sql  0_20211112150908_init.sql  1_20211014095302_make_link_column_nullable.sql  1_20211112161138_make_field_unique.sql  2_20211014095541_rename_field.sql  3_20211014105755_make_field_integer.sql  4_20211014111250_make_field_float.sql
app/: package.json
app/src/: App.js
app/src/panels/: Home.js  Leftovers.js
bot/: Dockerfile  main.py  pyproject.toml
bot/bot/: main.py
bot/bot/utils/: core.py  keyboards.py
bot/utils/: core.py  keyboards.py  rules.py
bot/utils/client/: __init__.py  api.py  models.py
choco/: Program.cs  WeatherForecast.cs  choco.csproj
choco/ClientApp/: package.json
choco/ClientApp/src/: AppRoutes.js  setupProxy.js
choco/Controllers/: WeatherForecastController.cs
choco/Data/: AppDbContext.cs
choco/Data/Models/: ProductCategory.cs
choco/Properties/: launchSettings.json
chocoAdmin/: Dockerfile  Program.cs  appsettings.Development.json  appsettings.Staging.json  appsettings.json  chocoAdmin.csproj
chocoAdmin/ApiClients/Vk/: VkApi.cs
chocoAdmin/ApiClients/VkService/: VkServiceClient.cs
chocoAdmin/ClientApp/: package-lock.json  package.json
chocoAdmin/ClientApp.old/: .gitignore  package-lock.json  package.json
chocoAdmin/ClientApp.old/public/: index.html
chocoAdmin/ClientNew/: .eslintrc.json  index.html  package.json  tsconfig.json  vite.config.ts
chocoAdmin/Controllers/: AuthController.cs  CustomersController.cs  ExportController.cs  InventoryController.cs  MovingStatusesController.cs  OrderCitiesController.cs  OrderStatusesController.cs  OrdersController.cs  ProductCategoriesController.cs  ProductsController.cs  ShipmentStatusesController.cs  ShipmentsController.cs  StatsController.cs  VkController.cs
chocoAdmin/Data/: AppDbContext.cs
chocoAdmin/Exceptions/: UpdatingPostException.cs  UpdatingProductException.cs  UploadingImageException.cs
chocoAdmin/Extensions/: MvcOptionsExtensions.cs
chocoAdmin/Pages/: Error.cshtml.cs  _ViewImports.cshtml
chocoAdmin/Properties/: launchSettings.json
chocoAdmin/RequestBodies/: CreateOrderRequestBody.cs  CreateProductRequestBody.cs  CreateShipmentRequestBody.cs  LoginByPasswordRequestBody.cs  LoginByRefreshTokenRequestBody.cs  LoginRequestBody.cs  RefreshTokenRequestBody.cs  RegisterRequestBody.cs  SaveInventoryRequestBody.cs  UpdateOrderAddressRequestBody.cs  UpdateOrderRequestBody.cs  UpdateProductRequestBody.cs  UpdateShipmentRequestBody.cs  UserRequestBody.cs
chocoAdmin/Responses/: IncomesResponse.cs  LoginResponse.cs  RefreshResponse.cs
chocoAdmin/Utils/: ReplacePostUtil.cs
chocoAdmin/client/: .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  craco.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/: api.py  pyproject.toml
client/client/: api.py  models.py
code/api/: Dockerfile  gunicorn.conf.py  pyproject.toml
geocodingIntegration/: pyproject.toml
tg/: Dockerfile  main.py  pyproject.toml
tg/utils/: core.py  filters.py  keyboards.py
tg/utils/client/: api.py
vk/: Dockerfile  filters.py  main.py  pyproject.toml
vk/database/: models.py  redis.py
(+316 files in other folders)
