[tool.poetry]
name = "choco"
version = "0.1.0"
description = ""
authors = ["Daniil <dadyarri@gmail.com>"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.9"
pony = "git+https://github.com/fscdev/vkwave.git"
ujson = "^4.0.2"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
