[tool.poetry]
name = "api"
version = "1.2.0"
description = "internal api for chocomanager"
authors = ["Daniil <dadyarri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.70.0"}
tortoise-orm = "^0.17.8"
asyncpg = "^0.24.0"
gunicorn = "^20.1.0"
aerich = "^0.5.8"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
