[tool.poetry]
name = "choco-bot"
version = "0.1.0"
description = ""
authors = ["Daniil <dadyarri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tortoise-orm = "^0.17.8"
vkbottle = "^3.0.2"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
