[tool.poetry]
name = "choco-bot"
version = "1.5.0"
description = ""
authors = ["Daniil <dadyarri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
vkbottle = "^3.0.2"
aiohttp = "^3.7.4"
sentry-sdk = "^1.4.3"
client = {path = "../client"}
geopy = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
