[tool.poetry]
name = "client"
version = "0.1.0"
description = "Client for ChocoManager's API"
authors = ["Daniil <dadyarri@gmail.com>"]
license = "Proprietary"
packages = [
    { include = "*.py" }
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
