[tool.poetry]
name = "choco-tg"
version = "1.4.0"
description = "Telegram side of chocoInformer bot"
authors = ["Daniil <dadyarri@gmail.com>"]
license = "Propreitary"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.11.2"
vkbottle = "^3.0.2"
client = {path = "../client"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
