[tool.poetry]
name = "choco-tg"
version = "1.15.0"
description = "Telegram side of chocoInformer bot"
authors = ["Daniil <dadyarri@gmail.com>"]
license = "Propreitary"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.18"
vkbottle = "^4.3.2"
client = {path = "../client"}
thefuzz = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
