[tool.poetry]
name = "choco"
version = "0.4.1"
description = ""
authors = ["Daniil <dadyarri@gmail.com>"]
license = "Propreitary"

[tool.poetry.dependencies]
python = "^3.8"
vkwave = {git = "https://github.com/fscdev/vkwave.git"}
requests = "^2.25.0"
pony = "^0.7.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
